hphp/hack/test/typecheck/lsb_disallow_override_public.php.exp
File "lsb_disallow_override_public.php", line 8, characters 21-22:
Member $x may not override __LSB member of parent (Typing[4284])
File "lsb_disallow_override_public.php", line 4, characters 31-32:
This is being overridden
