hphp/hack/test/typecheck/lsb_disallow_override_public.php
<?hh

class A {
  <<__LSB>> public static int $x = 0;
}

class B extends A {
  public static int $x = 1;
}
